# ICAIF_stablecoin-contagion-network

./: .env.example  .gitignore  CITATION.cff  DATA_INVENTORY.md  Makefile  PAPER_SUBMISSION.md  README.md  TODO.md  environment.yml  pyproject.toml  requirements-optional.txt  requirements.txt
configs/: events.yaml  feature_tiers.yaml  features.yaml  models.yaml  nodes.yaml  paper.yaml  required_nodes.yaml  sources.yaml  vendor_l2.yaml
docs/: INTEGRATION_funnel_and_contract.md  data_acquisition_plan.md  data_card.md  data_gaps.md  event_windows.md  limitations.md  methodology.md  node_taxonomy.md  provenance_tiers.md  reproducibility.md  source_coverage_matrix.md  tier_assignment_rules.md  vendor_decision_log.md
paper/: README_paper_package.md  figure_captions.md  main.md  main.tex  references.bib  refs.bib  slides.tex
scripts/: 00_make_event_windows.py  00b_audit_provenance.py  00c_claim_gate.py  00d_check_empirical_coverage.py  00e_verify_pool_size_estimates.py  01_fetch_raw_data.py  01_ingest_raw_data.py  01b_ingest_vendor_l2.py  01c_ingest_dune_queries.py  02_build_books_and_pools.py  02_reconstruct_silver.py  02b_reconstruct_l2_books.py  03_build_feature_panel.py  03b_make_event_maps.py  03c_combine_panels.py  04_run_leadlag.py  04b_run_hayashi_yoshida.py  05_run_var_granger.py  05b_run_tvp_var.py  06_run_hawkes.py  06b_run_sparse_flow_event_study.py  07_run_transfer_entropy.py  07b_run_forbes_rigobon.py  08_build_networks.py  08b_run_centrality.py  08b_run_qvar.py  09_run_prediction.py  09b_make_prediction_dataset.py  09d_train_temporal_gnn.py  (+53 more)
(+427 files in other folders)
